--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
 	<div class="top-container">
-		<img class="top-cloud" src="file:///C:/Users/Davie/Desktop/web/web%202/images/cloud.png.png" alt="cloud-img">
+		<img class="top-cloud" src="images/cloud.png.png" alt="cloud-img">
 		<h2>I'm Davie</h2>
 		<p class="top">a Programmer</p>
-		<img class="bottom-cloud" src="file:///C:/Users/Davie/Desktop/web/web%202/images/cloud.png.png" alt="cloud-img">
+		<img class="bottom-cloud" src="images/cloud.png.png" alt="cloud-img">
 		<img class="mountain" src="http://seanhalpin.io/assets/img/content/home/masthead/land.svg" alt="mountain-img">
 	</div>
 	<div class="middle-container">
