--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<img class="mountain" src="http://seanhalpin.io/assets/img/content/home/masthead/land.svg" alt="mountain-img">
 	</div>
 	<div class="middle-container">
-		<img class="image-middle" src="C:\Users\Davie\Downloads\undraw_Hello_qnas.svg" alt="img">
+		<img class="image-middle" src="images/undraw_Hello_qnas.png" alt="img">
 	<h2>Hi</h2>
 	<p>I'm a web designer / developer based in both Front-end</p>
 	<p> and back-end I have a passion for web design and love to</p>  
@@ -24,7 +24,7 @@
 	<h2>What i can do</h2>
 	
 			<div class="skills">
-				<img class="photoshop" src="C:\Users\Davie\Downloads\undraw_design_tools_42tf.svg" alt="photoshop">
+				<img class="photoshop" src="images/undraw_design_tools_42tf.png" alt="photoshop">
 	<h3>Design what you whant</h3>
 	<p>I like to keep it simple. My goals are to focus on</p>
 	<p>typography, content and conveying the message </p> 
@@ -35,7 +35,7 @@
 
 <table>
 	<tr>
-		<td><img class="code" src="file:///C:/Users/Davie/Downloads/undraw_web_developer_p3e5.svg" alt="code"></td>
+		<td><img class="code" src="images/undraw_web_developer_p3e5.png" alt="code"></td>
 		<td><h3>Develop what you need.</h3>
 	<p>I'm a developer, so I know how to create your </p>
 		<p> website to run across devices using the latest</p> 
