--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Davie</title>
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
-	<link rel="icon" href="file:///C:/Users/Davie/Desktop/web/web%202/images/icons8-laptop-48.png">
+	<link rel="icon" href="images/icons8-laptop-48.png">
 	<link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
 </head>
 <body>
