--- a/index.html
+++ b/index.html
@@ -22,15 +22,25 @@
 	<p>create for web and mobile devices</p> 
 	<hr>
 	<h2>What i can do</h2>
-	
-			<div class="skills">
-				<img class="photoshop" src="images/undraw_design_tools_42tf.svg" alt="photoshop">
-	<h3>Design what you whant</h3>
+
+
+	<div class="skills">
+
+	<table>
+		<tr>
+			<td><img class="photoshop" src="images/undraw_design_tools_42tf.svg" alt="photoshop"></td>
+			<td><h3>Design what you whant</h3>
 	<p>I like to keep it simple. My goals are to focus on</p>
 	<p>typography, content and conveying the message </p> 
 	<p>that you want to send.</p> 
+				</td>
+		</tr>
+	</table>
+	
+			
 				
-			</div>
+	
+   </div>
 	
 
 <table>
